--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix" : "",
-	"token" : "",
-	"delay" : "delay in secs without any unit, for eg: 5",
-	"log_dms" : "enable or disable the logging after each DM"
+	"prefix" : "B",
+	"token" : "ODk5ODcwNjU0MTgxMDE5NzA4.YW5D2g.45DZ__CpRrvU5Sx3frG0MfJxJGo",
+	"delay" : "1",
+	"log_dms" : "on"
 }
