--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"prefix" : "b",
+	"prefix" : "?",
 	"token" : "ODk5ODcwNjU0MTgxMDE5NzA4.YW5D2g.45DZ__CpRrvU5Sx3frG0MfJxJGo",
 	"delay" : "1",
 	"log_dms" : "on"
